--- a/app/src/main/res/layout/activity_tag_list.xml
+++ b/app/src/main/res/layout/activity_tag_list.xml
@@ -47,8 +47,7 @@
         android:textSize="@dimen/text_size_18"
         android:textStyle="bold"
         android:layout_below="@+id/linearLayout"
-        android:layout_centerHorizontal="true"
-        />
+        android:layout_centerHorizontal="true" />
 
     <LinearLayout
         android:id="@+id/title"
@@ -57,9 +56,7 @@
         android:orientation="horizontal"
         android:layout_below="@+id/tv_total_tag_count"
         android:background="@color/cherry_red"
-        android:padding="@dimen/padding_5"
-
-        >
+        android:padding="@dimen/padding_5">
 
             <TextView
                 android:layout_width="130dp"
@@ -82,9 +79,7 @@
                 android:paddingLeft="@dimen/padding_10"
                 android:layout_weight="2"
                 android:gravity="center"
-                android:background="@color/accent_material_dark"
-                />
-
+                android:background="@color/accent_material_dark"/>
 
     </LinearLayout>
 
@@ -92,9 +87,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/title"
-        android:padding="0.5dp"
-        android:stretchColumns="*"
-        >
+        android:padding="0.5dp">
         <ListView
             android:id="@+id/lv_tags"
             android:layout_width="fill_parent"
