--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,8 +21,7 @@
         android:id="@+id/et_mytag"
         android:layout_alignParentTop="true"
         android:layout_toEndOf="@+id/textView"
-        android:layout_toRightOf="@+id/textView"
-        android:digits="abcdefghijklmnopqrstuvwxyz1234567890 "/>
+        android:layout_toRightOf="@+id/textView"/>
 
     <Button
         android:layout_width="wrap_content"
