--- a/app/src/main/res/layout/activity_tag_list.xml
+++ b/app/src/main/res/layout/activity_tag_list.xml
@@ -86,8 +86,8 @@
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/title"
-        android:padding="0.5dp">
+        android:layout_alignParentBottom="true"
+        android:layout_below="@id/title">
         <ListView
             android:id="@+id/lv_tags"
             android:layout_width="fill_parent"
